crates/diskuse/tests/snapshots/in_a_59_wide@linux-d4096-s0.snap
---
source: tests/browse.rs
---
/fixture  1.6 MiB | 2 folders unreadable (d)
  32.0 KiB+ 66.7% b/
   8.0 KiB  16.7% h1
   8.0 KiB  16.7% h2
   4.0 KiB   8.3% f1













b/ | 32.0 KiB  own 12.0 KiB | 1 unreadable
hjkl move  i info  u units  space pick  ? help  q quit
--- styles ---
 0  10..17  BOLD
 0  17..20  DarkGray
 1   0..59  Indexed(231) on Indexed(25) BOLD
 2   0..10  Green
 2  10..11  DarkGray
 2  12..17  Green
 3   0..10  Green
 3  10..11  DarkGray
 3  12..17  Green
 4   0..10  Green
 4  10..11  DarkGray
 4  12..17  Green
18   0..2   BOLD
18   2..5   DarkGray
18   5..13  Green
18  13..19  DarkGray
18  27..30  DarkGray
18  30..42  Yellow
19   0..4   Cyan BOLD
19  11..12  Cyan BOLD
19  19..20  Cyan BOLD
19  28..33  Cyan BOLD
19  40..41  Cyan BOLD
19  48..49  Cyan BOLD
